# aioftx

./: LICENSE  README.md  pyproject.toml
aioftx/: http.py  session.py  types.py
aioftx/fills/: api.py  schemas.py
aioftx/futures/: api.py  schemas.py
aioftx/futures/expired/: api.py  schemas.py
aioftx/futures/futures/: api.py  schemas.py
aioftx/futures/indexes/: api.py  schemas.py
aioftx/futures/rates/: api.py  schemas.py
aioftx/futures/stats/: api.py  schemas.py
aioftx/markets/: api.py  schemas.py
aioftx/markets/markets/: api.py  schemas.py
aioftx/markets/orderbook/: api.py  schemas.py
aioftx/markets/prices/: api.py  schemas.py
aioftx/markets/trades/: api.py  schemas.py
aioftx/options/: api.py  schemas.py
aioftx/options/account/: api.py  schemas.py
aioftx/options/fills/: api.py  schemas.py
aioftx/options/positions/: api.py  schemas.py
aioftx/options/quote_request/: api.py  schemas.py
aioftx/options/quotes/: api.py  schemas.py
aioftx/options/shared/: schemas.py
aioftx/options/stats/: api.py  schemas.py
aioftx/orders/: api.py  schemas.py
aioftx/orders/order/: api.py  schemas.py
aioftx/orders/trigger/: api.py  schemas.py
aioftx/payments/: api.py  schemas.py
aioftx/wallet/: api.py  schemas.py
aioftx/wallet/addresses/: api.py  schemas.py
aioftx/wallet/airdrops/: api.py  schemas.py
aioftx/wallet/balances/: api.py  schemas.py
aioftx/wallet/coins/: api.py  schemas.py
aioftx/wallet/deposits/: api.py  schemas.py
aioftx/wallet/history/: api.py  schemas.py
aioftx/wallet/signet/: api.py  schemas.py
utils/: schemas.py
(+2 files in other folders)
