[tool.poetry]
name = "aioftx"
version = "0.1.0"
description = ""
authors = ["Tony Francis <tonyfrancisv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
uvloop = "^0.16.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.930"
neovim = "^0.3.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
